[package]
edition = "2018"
name = "jsonxs"
version = "0.0.1"
authors = ["Petr Kozelka <pkozelka@gmail.com>"]
exclude = [".github/**"]
description = "Extra small JSON exporter"
homepage = "https://github.com/pkozelka/jsonxs-rs"
documentation = "https://docs.rs/jsonxs"
readme = "README.md"
keywords = ["json"]
categories = ["encoding"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/pkozelka/jsonxs-rs"

[dependencies]
